--- a/portfolio.html
+++ b/portfolio.html
@@ -65,234 +65,230 @@
         </section>
       </div>
     </header>
-    <main class="main-portfolio">
-      <div class="container">
-        <section>
-          <ul class="buttons-portfolio">
-            <li>
-              <button class="button-portfolio" type="button">Wszystkie</button>
-            </li>
-            <li>
-              <button class="button-portfolio" type="button">Strony</button>
-            </li>
-            <li>
-              <button class="button-portfolio" type="button">Aplikacje</button>
-            </li>
-            <li>
-              <button class="button-portfolio" type="button">Dizajn</button>
-            </li>
-            <li>
-              <button class="button-portfolio" type="button">Marketing</button>
-            </li>
-          </ul>
-        </section>
-      </div>
-      <div class="container">
-        <section>
-          <ul class="projects">
-            <li>
-              <div class="project">
-                <div class="project-overlay">
-                  <img
-                    src="images/technocrack.jpg"
-                    alt="technocrack"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="portfolio-overlay">
-                    <p>
-                      Technocrack jest popularną platformą wykorzystywaną do
-                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
-                      platformę do celów szpiegowskich i ataków na
-                      niezabezpieczone serwery konkurencji
-                    </p>
-                  </div>
-                </div>
-                <h3 class="name-of-project">Technocrack</h3>
-                <p class="type-of-project">Strona internetowa</p>
+    <main class="main-portfolio container">
+      <ul class="portfolio-buttons">
+        <li>
+          <button class="portfolio-buttons__item" type="button">
+            Wszystkie
+          </button>
+        </li>
+        <li>
+          <button class="portfolio-buttons__item" type="button">Strony</button>
+        </li>
+        <li>
+          <button class="portfolio-buttons__item" type="button">
+            Aplikacje
+          </button>
+        </li>
+        <li>
+          <button class="portfolio-buttons__item" type="button">Dizajn</button>
+        </li>
+        <li>
+          <button class="portfolio-buttons__item" type="button">
+            Marketing
+          </button>
+        </li>
+      </ul>
+      <ul class="projects">
+        <li>
+          <div class="project projects__project">
+            <div class="project__img">
+              <img
+                src="images/technocrack.jpg"
+                alt="technocrack"
+                width="370"
+                height="294"
+              />
+              <div class="project__overlay">
+                <p>
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
-            </li>
-            <li>
-              <div class="project">
-                <div class="project-overlay">
-                  <img
-                    src="images/basketball.jpg"
-                    alt="basketball"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="portfolio-overlay">
-                    <p>
-                      Technocrack jest popularną platformą wykorzystywaną do
-                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
-                      platformę do celów szpiegowskich i ataków na
-                      niezabezpieczone serwery konkurencji
-                    </p>
-                  </div>
-                </div>
-                <h3 class="name-of-project">
-                  Grafika New Orlean vs Golden Star
-                </h3>
-                <p class="type-of-project">Dizajn</p>
+            </div>
+            <h3 class="project__name">Technocrack</h3>
+            <p class="project__type">Strona internetowa</p>
+          </div>
+        </li>
+        <li>
+          <div class="project projects__project">
+            <div class="project__img">
+              <img
+                src="images/basketball.jpg"
+                alt="basketball"
+                width="370"
+                height="294"
+              />
+              <div class="project__overlay">
+                <p>
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
-            </li>
-            <li>
-              <div class="project">
-                <div class="project-overlay">
-                  <img
-                    src="images/logoseefood.jpg"
-                    alt="logo of see food restauration"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="portfolio-overlay">
-                    <p>
-                      Technocrack jest popularną platformą wykorzystywaną do
-                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
-                      platformę do celów szpiegowskich i ataków na
-                      niezabezpieczone serwery konkurencji
-                    </p>
-                  </div>
-                </div>
-                <h3 class="name-of-project">Restauracja Seafood</h3>
-                <p class="type-of-project">Aplikacja</p>
+            </div>
+            <h3 class="project__name">Grafika New Orlean vs Golden Star</h3>
+            <p class="project__type">Dizajn</p>
+          </div>
+        </li>
+        <li>
+          <div class="project projects__project">
+            <div class="project__img">
+              <img
+                src="images/logoseefood.jpg"
+                alt="logo of see food restauration"
+                width="370"
+                height="294"
+              />
+              <div class="project__overlay">
+                <p>
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
-            </li>
-            <li>
-              <div class="project">
-                <div class="project-overlay">
-                  <img
-                    src="images/headphones.jpg"
-                    alt="headphones"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="portfolio-overlay">
-                    <p>
-                      Technocrack jest popularną platformą wykorzystywaną do
-                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
-                      platformę do celów szpiegowskich i ataków na
-                      niezabezpieczone serwery konkurencji
-                    </p>
-                  </div>
-                </div>
-                <h3 class="name-of-project">Projekt Prime</h3>
-                <p class="type-of-project">Marketing</p>
+            </div>
+            <h3 class="project__name">Restauracja Seafood</h3>
+            <p class="project__type">Aplikacja</p>
+          </div>
+        </li>
+        <li>
+          <div class="project projects__project">
+            <div class="project__img">
+              <img
+                src="images/headphones.jpg"
+                alt="headphones"
+                width="370"
+                height="294"
+              />
+              <div class="project__overlay">
+                <p>
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
-            </li>
-            <li>
-              <div class="project">
-                <div class="project-overlay">
-                  <img
-                    src="images/boxes.jpg"
-                    alt="two boxes"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="portfolio-overlay">
-                    <p>
-                      Technocrack jest popularną platformą wykorzystywaną do
-                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
-                      platformę do celów szpiegowskich i ataków na
-                      niezabezpieczone serwery konkurencji
-                    </p>
-                  </div>
-                </div>
-                <h3 class="name-of-project">Projekt Boxes</h3>
-                <p class="type-of-project">Aplikacja</p>
+            </div>
+            <h3 class="project__name">Projekt Prime</h3>
+            <p class="project__type">Marketing</p>
+          </div>
+        </li>
+        <li>
+          <div class="project projects__project">
+            <div class="project__img">
+              <img
+                src="images/boxes.jpg"
+                alt="two boxes"
+                width="370"
+                height="294"
+              />
+              <div class="project__overlay">
+                <p>
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
-            </li>
-            <li>
-              <div class="project">
-                <div class="project-overlay">
-                  <img
-                    src="images/blackmonitor.jpg"
-                    alt="black monitor"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="portfolio-overlay">
-                    <p>
-                      Technocrack jest popularną platformą wykorzystywaną do
-                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
-                      platformę do celów szpiegowskich i ataków na
-                      niezabezpieczone serwery konkurencji
-                    </p>
-                  </div>
-                </div>
-                <h3 class="name-of-project">Inspiration has no Borders</h3>
-                <p class="type-of-project">Strona internetowa</p>
+            </div>
+            <h3 class="project__name">Projekt Boxes</h3>
+            <p class="project__type">Aplikacja</p>
+          </div>
+        </li>
+        <li>
+          <div class="project projects__project">
+            <div class="project__img">
+              <img
+                src="images/blackmonitor.jpg"
+                alt="black monitor"
+                width="370"
+                height="294"
+              />
+              <div class="project__overlay">
+                <p>
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
-            </li>
-            <li>
-              <div class="project">
-                <div class="project-overlay">
-                  <img
-                    src="images/magazine.jpg"
-                    alt="magazine"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="portfolio-overlay">
-                    <p>
-                      Technocrack jest popularną platformą wykorzystywaną do
-                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
-                      platformę do celów szpiegowskich i ataków na
-                      niezabezpieczone serwery konkurencji
-                    </p>
-                  </div>
-                </div>
-                <h3 class="name-of-project">Magazyn Limited Edition</h3>
-                <p class="type-of-project">Dizajn</p>
+            </div>
+            <h3 class="project__name">Inspiration has no Borders</h3>
+            <p class="project__type">Strona internetowa</p>
+          </div>
+        </li>
+        <li>
+          <div class="project projects__project">
+            <div class="project__img">
+              <img
+                src="images/magazine.jpg"
+                alt="magazine"
+                width="370"
+                height="294"
+              />
+              <div class="project__overlay">
+                <p>
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
-            </li>
-            <li>
-              <div class="project">
-                <div class="project-overlay">
-                  <img
-                    src="images/label.jpg"
-                    alt="label tag"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="portfolio-overlay">
-                    <p>
-                      Technocrack jest popularną platformą wykorzystywaną do
-                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
-                      platformę do celów szpiegowskich i ataków na
-                      niezabezpieczone serwery konkurencji
-                    </p>
-                  </div>
-                </div>
-                <h3 class="name-of-project">Projekt LAB</h3>
-                <p class="type-of-project">Marketing</p>
+            </div>
+            <h3 class="project__name">Magazyn Limited Edition</h3>
+            <p class="project__type">Dizajn</p>
+          </div>
+        </li>
+        <li>
+          <div class="project projects__project">
+            <div class="project__img">
+              <img
+                src="images/label.jpg"
+                alt="label tag"
+                width="370"
+                height="294"
+              />
+              <div class="project__overlay">
+                <p>
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
-            </li>
-            <li>
-              <div class="project">
-                <div class="project-overlay">
-                  <img
-                    src="images/notebook.jpg"
-                    alt="notebook"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="portfolio-overlay">
-                    <p>
-                      Technocrack jest popularną platformą wykorzystywaną do
-                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
-                      platformę do celów szpiegowskich i ataków na
-                      niezabezpieczone serwery konkurencji
-                    </p>
-                  </div>
-                </div>
-                <h3 class="name-of-project">Growing Business</h3>
-                <p class="type-of-project">Aplikacja</p>
+            </div>
+            <h3 class="project__name">Projekt LAB</h3>
+            <p class="project__type">Marketing</p>
+          </div>
+        </li>
+        <li>
+          <div class="project projects__project">
+            <div class="project__img">
+              <img
+                src="images/notebook.jpg"
+                alt="notebook"
+                width="370"
+                height="294"
+              />
+              <div class="project__overlay">
+                <p>
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
-            </li>
-          </ul>
-        </section>
-      </div>
+            </div>
+            <h3 class="project__name">Growing Business</h3>
+            <p class="project__type">Aplikacja</p>
+          </div>
+        </li>
+      </ul>
     </main>
     <footer>
       <div class="container">
