--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <title>Portfolio</title>
   </head>
   <body>
@@ -38,7 +38,7 @@
                     >Portfolio</a
                   >
                 </li>
-                <li class="navigation__link">Kontakt</li>
+                <li><a class="navigation__link" href="">Kontakt</a></li>
               </ul>
             </nav>
           </div>
