--- a/index.html
+++ b/index.html
@@ -403,62 +403,60 @@
       </section>
     </main>
     <footer>
-      <div class="container">
-        <section class="footer">
-          <div class="footer__logo">
-            <a class="logo logo--footer" href="./index.html"
-              ><span class="logo__link-text">Web</span>Studio</a
-            >
-            <address>
-              m. Warszawa, Aleje Jerozolimskie 21 <br />
-              info@example.com <br />
-              +48 111 111 111
-            </address>
-          </div>
-          <div class="social">
-            <p class="social__title">DOŁĄCZ DO NAS</p>
-            <div class="social-links">
-              <div class="social-links__item social-links__item--dark">
-                <svg width="20" height="20">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </div>
-              <div class="social-links__item social-links__item--dark">
-                <svg width="20" height="20">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </div>
-              <div class="social-links__item social-links__item--dark">
-                <svg width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </div>
-              <div class="social-links__item social-links__item--dark">
-                <svg width="20" height="20">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </div>
+      <section class="footer container">
+        <div class="footer__logo">
+          <a class="logo logo--footer" href="./index.html"
+            ><span class="logo__link-text">Web</span>Studio</a
+          >
+          <address>
+            m. Warszawa, Aleje Jerozolimskie 21 <br />
+            info@example.com <br />
+            +48 111 111 111
+          </address>
+        </div>
+        <div class="social">
+          <p class="social__title">DOŁĄCZ DO NAS</p>
+          <div class="social-links">
+            <div class="social-links__item social-links__item--dark">
+              <svg width="20" height="20">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </div>
+            <div class="social-links__item social-links__item--dark">
+              <svg width="20" height="20">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </div>
+            <div class="social-links__item social-links__item--dark">
+              <svg width="20" height="20">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </div>
+            <div class="social-links__item social-links__item--dark">
+              <svg width="20" height="20">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
             </div>
           </div>
-          <div class="newsletter">
-            <p class="newsletter__text">ZAPISZ SIĘ DO NEWSLETTERA</p>
-            <form name="signup-form">
-              <input
-                class="newsletter__input"
-                type="email"
-                name="signupemail"
-                placeholder="E-mail"
-              />
-              <button class="button-footer" type="submit">
-                Zapisz się
-                <svg class="newsletter__button-send" width="24" height="24">
-                  <use href="./images/icons.svg#icon-send"></use>
-                </svg>
-              </button>
-            </form>
-          </div>
-        </section>
-      </div>
+        </div>
+        <div class="newsletter">
+          <p class="newsletter__text">ZAPISZ SIĘ DO NEWSLETTERA</p>
+          <form name="signup-form">
+            <input
+              class="newsletter__input"
+              type="email"
+              name="signupemail"
+              placeholder="E-mail"
+            />
+            <button class="button-footer" type="submit">
+              Zapisz się
+              <svg class="newsletter__button-send" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
+      </section>
     </footer>
     <script src="./js/modal.js"></script>
   </body>
